Selina Careers - Hospitality Operations (Internship Opportunity). VEON - Internship ES BSD. VEON - Intern People and Organization.       Graphic Design Internship - Swapfiets     . Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN. Bosch Group Internship in the field of Platform Engineering Wheel Speed Sensors | SmartRecruiters. Eidos Montréal Careers - Stagiaire en ressources humaines / Human Resources intern. Eidos Montréal Careers - Stagiaire - Technicien Support Informatique / Intern – IT Support Technician. Job Application for Intern - Assistive Care State Programs at BAYADA Home Health Care. Job Application for Communications Intern at Tencent. Internship: Nonprofit/Health & Wellness - IT'S TIME TEXAS - Career Page. Logitech Careers - Marketing Intern. Job @ SO1 (Berlin): Talent Management Intern (m/f/x) | JOIN. B.Yond Data Scientist Developer - Intern | SmartRecruiters.       Communications & Advocacy Intern - Médecins Sans Frontières Suisse     . Schneider Electric NAM Careers - Software Programmer Fall Internship.       PR and Marketing Intern (NYC) - EVBox     .       Embedded Software Development Intern - EVBox     .       Marketing & Growth Intern - Swedish Market - EVBox     . Mercy Corps Careers - Portland, OR - MicroMentor Brand & Content Strategy Intern. Mercy Corps Careers - Portland, OR - Content Strategy Team Social Media Intern. Arkadium - Jobs: Marketing Intern (Fall 2019) - Apply online. Job @ colorfy (Berlin): Marketing Intern (f/m) | JOIN. Job @ colorfy (Berlin): Quality Assurance Intern (... | JOIN. Job @ colorfy (Berlin): Project Management Intern ... | JOIN. Job @ colorfy (Berlin): Product Design Internship ... | JOIN. Wave Financial - Intern, Finance and Accounting. Vinterior - Jobs: Client Experience Guru - Buyers team - Paid internship - Apply online. Vinterior - Jobs: Business Development - Paid Internship - Apply online. Job Application for Data Science Consulting  Intern at Domo. Job Application for Data Science Consulting

--- a/internship.html
+++ b/internship.html
@@ -49,17 +49,17 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://swapfiets.recruitee.com/o/graphic-design-internship'>
+<h5><a href='https://swapfiets.recruitee.com/o/graphic-design-internship'>
       Graphic Design Internship - Swapfiets
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light">Seoul Seoul</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/261819-talent-management-intern-m-f-x'>Job @ SO1 (Berlin): Talent Management Intern (m/f/x) | JOIN</a></h5> 
+<h5><a href='https://so1.join.com/jobs/261819-talent-management-intern-m-f-x'>Job @ SO1 (Berlin): Talent Management Intern (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -205,7 +205,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -233,7 +233,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://newamerica.applytojob.com/apply/8ltBBtLywt/Education-Policy-Intern-Higher-Education-Paid'>Education Policy Intern- Higher Education (Paid) - New America - Career Page</a></h5> 
+<h5><a href='http://newamerica.applytojob.com/apply/8ltBBtLywt/Education-Policy-Intern-Higher-Education-Paid'>Education Policy Intern- Higher Education (Paid) - New America - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -241,7 +241,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
+<h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -301,7 +301,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
+<h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -309,7 +309,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dsst/jobs/1464505'>Job Application for Coordinator of College Success- Internships (2019-2020) at DSST</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dsst/jobs/1464505'>Job Application for Coordinator of College Success- Internships (2019-2020) at DSST</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -325,12 +325,12 @@ learning?...</p>
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://infarm.join.com/jobs/258845-product-management-intern-m-w-d-berlin'>Job @ infarm (Berlin): Product Management Intern (... | JOIN</a></h5> 
+<h5><a href='https://infarm.join.com/jobs/258845-product-management-intern-m-w-d-berlin'>Job @ infarm (Berlin): Product Management Intern (... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999692238997-marketing-assistant-internship-belgium-m-f-'>JobTeaser Marketing Assistant - Internship - Belgium (M/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999692238997-marketing-assistant-internship-belgium-m-f-'>JobTeaser Marketing Assistant - Internship - Belgium (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -344,15 +344,15 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/agorize/7c5c9aa3-34da-4c78-9fe5-bcf4225359c7'>Agorize - Community Management Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/agorize/7c5c9aa3-34da-4c78-9fe5-bcf4225359c7'>Agorize - Community Management Intern</a></h5> 
 <p><span class="badge badge-light">Hong Kong</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -412,7 +412,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787209'>Job Application for Channel Sales Intern (German Speaking) at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787209'>Job Application for Channel Sales Intern (German Speaking) at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -432,7 +432,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787259'>Job Application for Copywriter - Dutch Speaking (Internship) at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787259'>Job Application for Copywriter - Dutch Speaking (Internship) at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -440,7 +440,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -456,7 +456,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787496'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787496'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -468,7 +468,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
