--- a/frontend.html
+++ b/frontend.html
@@ -43,7 +43,7 @@
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='http://medbridge.applytojob.com/apply/2dbhfhcvph/Front-End-Software-Engineer-II-Lehi-UT'>Front End Software Engineer II (Lehi, UT) - MedBridge - Career Page</a></h5> 
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://medbridge.applytojob.com/apply/uuZmRcu6Ak/Front-End-Software-Engineer-II-Seattle-WA'>Front End Software Engineer II (Seattle, WA) - MedBridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/uuZmRcu6Ak/Front-End-Software-Engineer-II-Seattle-WA'>Front End Software Engineer II (Seattle, WA) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -198,7 +198,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://qualitest-1.workable.com/j/AB0456B77B'>QualiTest - Jobs: R&D Frontend Developer EL - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qualitest-1.workable.com/j/AB0456B77B'>QualiTest - Jobs: R&D Frontend Developer EL - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -278,7 +278,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saggezza1.applytojob.com/apply/GVzfsSfegY/Frontend-Software-Engineer'>Frontend Software Engineer - Saggezza - Career Page</a></h5> 
+<h5><a href='http://saggezza1.applytojob.com/apply/GVzfsSfegY/Frontend-Software-Engineer'>Frontend Software Engineer - Saggezza - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -304,7 +304,7 @@ the?...</p>
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://activeprospect.applytojob.com/apply/9KN7fEO3Ur/Front-End-Software-Engineer-Remote-Ok'>Front End Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activeprospect.applytojob.com/apply/9KN7fEO3Ur/Front-End-Software-Engineer-Remote-Ok'>Front End Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -338,7 +338,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://zenabis.applytojob.com/apply/R9BI9hDQ48/Front-End-Developer'>Front End Developer - Zenabis - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zenabis.applytojob.com/apply/R9BI9hDQ48/Front-End-Developer'>Front End Developer - Zenabis - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -357,7 +357,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Frontend Web Developer - Roku at created 10-Jul-2019.</p>
 <hr/>
@@ -393,7 +393,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Segic/743999692130762-developpeur-front-end-stage-'>Segic D?veloppeur front end (stage) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Segic/743999692130762-developpeur-front-end-stage-'>Segic D?veloppeur front end (stage) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
